# clipperp_overlap

./: CMakeLists.txt  CMakeLists.txt_TRUBA
include/clipperplus/: clipperplus_graph.h
src/: clipperplus_clique.cpp  clipperplus_heuristic.cpp  clique_optimization.cpp  demo_clipper.cpp
